improve swagger docs
